chore: docker + change from postgres to mysql

--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "class-validator": "^0.14.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
+    "mysql2": "^3.6.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
