--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:js": "eslint \"{src,apps,libs,test}/**/*.ts\" --ignore-path .gitignore --ignore-path .eslintignore",
+    "lint:prettier": "prettier --check .",
+    "lint": "yarn lint:js && yarn lint:prettier",
+    "lintfix:prettier": "prettier --write --list-different .",
+    "lintfix": "yarn lintfix:prettier && yarn lint:js --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
