--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
             ${{ runner.os }}-modules-
 
       - name: Install 🔧
-        if: steps.modules-cache.outputs.cache-hit != 'true'
+        if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: yarn install
 
       - name: Lint 🧐
