--- a/.github/workflows/version-control-validation.yml
+++ b/.github/workflows/version-control-validation.yml
@@ -5,23 +5,9 @@ on:
     types: [opened, reopened, edited, synchronize]
 
 jobs:
-  validate-prod-mergeable:
-    name: Validate if merge can happen
-    if: github.base_ref == 'master'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/github-script@v6
-        with:
-          script: |
-            const branchName = "${{ github.head_ref }}";
-
-            if(!(branchName.startsWith("release/") || branchName.startsWith("hotfix/"))){
-              core.setFailed("This Pull Request can not be merged to the master branch");
-            }
-
-  validate-dev-mergeable:
+  validate-mergeable:
     name: Validate if dev merge can happen
-    if: github.base_ref == 'develop'
+    if: github.base_ref == 'main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v6
