chore: update migration scripts

--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-esm -d dist/db/datasource/default.js",
-    "migration:create": "typeorm migration:create",
-    "migration:run": "yarn typeorm migration:run",
-    "migration:revert": "yarn typeorm migration:revert",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:run": "yarn typeorm migration:run -d ./src/db/datasource/default.ts",
+    "migration:create": "./scripts/create-migration.sh",
+    "migration:revert": "yarn typeorm migration:revert -d ./src/db/datasource/default.ts",
+    "migration:fix:latest": "ts-node ./scripts/check_migrations.ts",
     "seed:run": "typeorm-seeding seed -d ./dist/db/datasource/default.js ./dist/db/seeds/*.seeder.js",
     "migration:seed:run": "yarn migration:run && yarn seed:run"
   },
