--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csvtojson": "^2.0.10",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.2",
     "passport": "^0.6.0",
