--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "seed:run": "typeorm-seeding seed -d ./dist/db/datasource/default.js ./dist/db/seeds/*.seeder.js",
     "migration:seed:run": "yarn migration:run && yarn seed:run",
     "update": "git checkout && git pull origin && yarn && yarn build && yarn migration:seed:run",
-    "new-release": "./scripts/create-release-branch.sh"
+    "new-release": "./scripts/create-release-branch.sh",
+    "prepare": "husky"
   },
   "dependencies": {
     "@casl/ability": "^6.5.0",
@@ -77,6 +78,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^9.0.11",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
