--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/jwt": "^10.1.1",
