chore: update db schema docs

--- a/tbls.yml
+++ b/tbls.yml
@@ -92,6 +92,20 @@ relations:
     parentColumns:
       - id
     def: 1-n
+  - table: invoices
+    columns:
+      - projectId
+    parentTable: projects
+    parentColumns:
+      - id
+    def: 1-n
+  - table: invoices
+    columns:
+      - categoryId
+    parentTable: categories
+    parentColumns:
+      - id
+    def: 1-n
 
   # invoice_items
   - table: invoice_items
@@ -101,22 +115,6 @@ relations:
     parentColumns:
       - id
     def: 1-n
-
-  # invoice_owners
-  - table: invoice_owners
-    columns:
-      - invoiceId
-    parentTable: invoices
-    parentColumns:
-      - id
-    def: n-1
-  - table: invoice_owners
-    columns:
-      - userId
-    parentTable: users
-    parentColumns:
-      - id
-    def: n-1
 
   # user_organization_invoices
   - table: user_organization_invoices
@@ -140,3 +138,58 @@ relations:
     parentColumns:
       - id
     def: n-n
+
+  # projects
+  - table: projects
+    columns:
+      - organizationId
+    parentTable: organizations
+    parentColumns:
+      - id
+    def: 1-n
+  - table: projects
+    columns:
+      - creatorId
+    parentTable: users
+    parentColumns:
+      - id
+    def: 1-n
+
+  # budgets
+  - table: budgets
+    columns:
+      - organizationId
+    parentTable: organizations
+    parentColumns:
+      - id
+    def: 1-n
+  - table: budgets
+    columns:
+      - projectId
+    parentTable: projects
+    parentColumns:
+      - id
+    def: 1-n
+  - table: budgets
+    columns:
+      - categoryId
+    parentTable: categories
+    parentColumns:
+      - id
+    def: 1-1
+
+  # categories
+  - table: categories
+    columns:
+      - organizationId
+    parentTable: organizations
+    parentColumns:
+      - id
+    def: 1-n
+  - table: budgets
+    columns:
+      - projectId
+    parentTable: projects
+    parentColumns:
+      - id
+    def: 1-n
