--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -20,8 +20,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
+
       - run: yarn install
       - run: yarn build
+      
       - name: Change Directory
         run: cd /home/duongnh/ramen/actions-runner/_work/ramen/ramen
-      - run: pm2 restart 0
+
+      - run: pm2 restart ramen
