--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -13,15 +13,6 @@ jobs:
         node-version: [20.13.1]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    env:
-      DB_HOSTNAME: ${{secrets.DB_HOSTNAME}}
-      DB_USERNAME: ${{secrets.DB_USERNAME}}
-      DB_PASSWORD: ${{secrets.DB_PASSWORD}}
-      DB_NAME: ${{secrets.DB_NAME}}
-      DB_PORT: ${{secrets.DB_PORT}}
-      DB_SYNCHRONIZE: ${{secrets.DB_SYNCHRONIZE}}
-      JWT_SECRET: ${{secrets.JWT_SECRET}}
-
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
@@ -29,6 +20,18 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
+
+      - name: 'Create env file'
+        run: |
+          touch .env
+          echo DB_HOSTNAME=${{ secrets.DB_HOSTNAME }} >> .env
+          echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
+          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
+          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          echo DB_SYNCHRONIZE=${{ secrets.DB_SYNCHRONIZE }} >> .env
+          echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
+          cat .env
 
       - run: yarn install
       - run: yarn build
