--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.13.1]
+        node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -33,8 +33,12 @@ jobs:
           echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env
           cat .env
 
-      - run: yarn install
-      - run: yarn build
+      - name: Install 🔧
+        run: yarn install
+  
+      - name: Build 🏗️
+        run: yarn build
+      
       
       - name: Change Directory
         run: cd /home/duongnh/ramen-ci/actions-runner/_work/ramen/ramen
